[gd_scene load_steps=8 format=2]

[ext_resource path="res://gameplay/player/blue_player.png" type="Texture" id=1]
[ext_resource path="res://gameplay/player/player.gd" type="Script" id=2]
[ext_resource path="res://gameplay/player/green_player.png" type="Texture" id=3]
[ext_resource path="res://gameplay/explosion/explosion.tscn" type="PackedScene" id=4]
[ext_resource path="res://gameplay/player/explosion.wav" type="AudioStream" id=5]
[ext_resource path="res://gameplay/player/delivery.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 133.5, 21.5 )

[node name="player" type="KinematicBody2D" groups=["boxes"]]
collision_mask = 8
script = ExtResource( 2 )

[node name="blue_sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="green_sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="collision_shape" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, -1.5 )
shape = SubResource( 1 )

[node name="boxes" type="Node2D" parent="."]

[node name="explosion" parent="." instance=ExtResource( 4 )]

[node name="explosion_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0
bus = "SFX"

[node name="delivery_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0
bus = "SFX"

[node name="cooldown_timer" type="Timer" parent="."]

[connection signal="timeout" from="cooldown_timer" to="." method="_on_cooldown_timer_timeout"]
